examples/errors/assign_before_declare.lox
say_my_name = "Heisenburger";

print say_my_name;